[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faststream"
description = "FastStream: the simplest way to work with a messaging queues"
readme = "README.md"
authors = [
    { name = "airt", email = "info@airt.ai" },
    { name = "Nikita Pastukhov", email = "nikita@pastukhov-dev.ru" },
]

keywords = [
    "rabbitmq",
    "kafka",
    "framework",
    "nats",
    "redis",
    "message brokers",
]

requires-python = ">=3.8"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: System :: Networking",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 1",
    "Framework :: Pydantic :: 2",
]

dynamic = ["version"]

dependencies = [
    "anyio>=3.7.1,<5",
    "fast-depends>=2.4.0b0,<2.5.0",
    "typer>=0.9,!=0.12,<1",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
# public distributions
rabbit = ["aio-pika>=9,<10"]

kafka = ["aiokafka>=0.9,<0.11"]

confluent = ["confluent-kafka>=2,<3"]

nats = ["nats-py>=2.3.1,<=3.0.0"]

redis = ["redis>=5.0.0,<6.0.0"]

otel = ["opentelemetry-sdk>=1.24.0,<2.0.0"]

# dev dependencies
optionals = ["faststream[rabbit,kafka,confluent,nats,redis,otel]"]

devdocs = [
    "mkdocs-material==9.5.21",
    "mkdocs-static-i18n==1.2.3",
    "mdx-include==1.4.2",
    "mkdocstrings[python]==0.25.1",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-git-revision-date-localized-plugin==1.2.5",
    "mike==2.1.1",                                      # versioning
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-macros-plugin==1.0.5",                      # includes with variables
    "mkdocs-glightbox==0.3.7",                          # img zoom
    "pillow",                                           # required for mkdocs-glightbo
    "cairosvg",                                         # required for mkdocs-glightbo
    "requests",                                         # using in CI, do not pin it
    "griffe-typingdoc==0.2.5",                          # Annotated[..., Doc("")] support
]

types = [
    "faststream[optionals]",
    "mypy==1.10.0",
    # mypy extensions
    "types-PyYAML",
    "types-setuptools",
    "types-ujson",
    "types-redis",
    "types-Pygments",
    "types-docutils",
    "confluent-kafka-stubs; python_version >= '3.11'",
]

lint = [
    "faststream[types]",
    "ruff==0.4.4",
    "bandit==1.7.8",
    "semgrep==1.70.0",
    "codespell==2.2.6",
]

test-core = [
    "coverage[toml]==7.5.1",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "dirty-equals==0.7.1.post0",
]

testing = [
    "faststream[test-core]",
    "fastapi==0.111.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "httpx==0.27.0",
    "PyYAML==6.0.1",
    "watchfiles==0.21.0",
    "email-validator==2.1.1",
]

dev = [
    "faststream[optionals,lint,testing,devdocs]",
    "pre-commit==3.5.0; python_version < '3.9'",
    "pre-commit==3.7.0; python_version >= '3.9'",
    "detect-secrets==1.5.0",
]

[project.urls]
Homepage = "https://faststream.airt.ai/latest/"
Documentation = "https://faststream.airt.ai/latest/getting-started/"
Tracker = "https://github.com/airtai/FastStream/issues"
Source = "https://github.com/airtai/FastStream"
Discord = "https://discord.gg/qFm6aSqq59"

[project.scripts]
faststream = "faststream.__main__:cli"

[tool.hatch.version]
path = "faststream/__about__.py"

[tool.hatch.build]
skip-excluded-dirs = true
exclude = ["/tests", "/docs"]

[tool.mypy]
files = ["faststream", "tests/mypy"]
strict = true
python_version = "3.8"
ignore_missing_imports = true
install_types = true
non_interactive = true
plugins = ["pydantic.mypy"]

# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = false

disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = false

[tool.ruff]
fix = true
line-length = 88
target-version = "py38"
include = [
    "faststream/**/*.py",
    "faststream/**/*.pyi",
    "tests/**/*.py",
    "docs/**/*.py",
    "pyproject.toml",
]
exclude = ["docs/docs_src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors     https://docs.astral.sh/ruff/rules/#error-e
    "W",     # pycodestyle warnings   https://docs.astral.sh/ruff/rules/#warning-w
    "C90",   # mccabe                 https://docs.astral.sh/ruff/rules/#mccabe-c90
    "N",     # pep8-naming            https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "D",     # pydocstyle             https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "I",     # isort                  https://docs.astral.sh/ruff/rules/#isort-i
    "F",     # pyflakes               https://docs.astral.sh/ruff/rules/#pyflakes-f
    "ASYNC", # flake8-async           https://docs.astral.sh/ruff/rules/#flake8-async-async
    "C4",    # flake8-comprehensions  https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "B",     # flake8-bugbear         https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "Q",     # flake8-quotes          https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "T20",   # flake8-print           https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "SIM",   # flake8-simplify        https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "PT",    # flake8-pytest-style    https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PTH",   # flake8-use-pathlib     https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TCH",   # flake8-type-checking   https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "RUF",   # Ruff-specific rules    https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "PERF",  # Perflint               https://docs.astral.sh/ruff/rules/#perflint-perf
    "UP",    # pyupgrade              https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

ignore = [
    "E501", # line too long, handled by formatter later
    "C901", # too complex

    # todo pep8-naming
    "N817", # CamelCase `*` imported as acronym `*`
    "N815", # Variable `*` in class scope should not be mixedCase
    "N803", # Argument name `expandMessageExamples` should be lowercase

    # todo pydocstyle
    "D100", # missing docstring in public module
    "D101",
    "D102",
    "D103",
    "D104", # missing docstring in public package
    "D105", # missing docstring in magic methods
    "D106", # missing docstring in public nested class
    "D107", # missing docstring in __init__
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D101",    # docstrings
    "D102",
    "D103",
    "PLR2004", # magic-value-comparison
    "S101",    # use assert
]

"docs/*.py" = [
    "D101", # docstrings
    "D102",
    "D103",
]


[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "faststream.Depends",
    "faststream.Context",
    "faststream.broker.fastapi.context.Context",
    "faststream.Header",
    "faststream.Path",
    "faststream.utils.Header",
    "faststream.utils.Path",
    "faststream.utils.Depends",
    "faststream.utils.Context",
    "faststream.utils.context.Depends",
    "faststream.utils.context.Context",
    "typer.Argument",
    "typer.Option",
    "pydantic.Field",
    "rocketry.args.Arg",
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.datastructures.Default",
    "kafka.partitioner.default.DefaultPartitioner",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q -m 'not slow'"
testpaths = ["tests"]
markers = ["rabbit", "kafka", "confluent", "nats", "redis", "slow", "all"]

[tool.coverage.run]
parallel = true
branch = true
concurrency = ["multiprocessing", "thread"]
source = ["docs/docs_src", "examples", "faststream", "tests"]
context = '${CONTEXT}'
omit = ["**/__init__.py", "tests/mypy/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_also = [
    "if __name__ == .__main__.:",
    "self.logger",
    "def __repr__",
    "lambda: None",
    "from .*",
    "import .*",
    '@(abc\.)?abstractmethod',
    "raise NotImplementedError",
    'raise AssertionError',
    'logger\..*',
    "pass",
    '\.\.\.',
]
omit = [
    '*/__about__.py',
    '*/__main__.py',
    '*/__init__.py',
    '*/annotations.py',
    'docs/docs_src/getting_started/serialization/avro.py',
    'docs/docs_src/getting_started/serialization/msgpack_ex.py',
    'docs/docs_src/getting_started/serialization/protobuf.py',
    'docs/docs_src/integrations/http_frameworks_integrations/aiohttp.py',
    'docs/docs_src/integrations/http_frameworks_integrations/blacksheep.py',
    'docs/docs_src/integrations/http_frameworks_integrations/falcon.py',
    'docs/docs_src/integrations/http_frameworks_integrations/litestar.py',
    'docs/docs_src/integrations/http_frameworks_integrations/quart.py',
    'docs/docs_src/integrations/http_frameworks_integrations/sanic.py',
    'docs/docs_src/integrations/http_frameworks_integrations/tornado.py',
    'examples/howto/structlogs.py',
    'examples/serialization/avro/avro.py',
    'examples/serialization/msgpack/pack.py',
    'examples/serialization/protobuf/protobuf.py',
]

[tool.bandit]

[tool.codespell]
skip = "./venv,./docs/site/*"
ignore-words = ".codespell-whitelist.txt"
